syntax = "proto3";
package joelbits;

import "google/protobuf/timestamp.proto";

option java_package = "joelbits.model.project.protobuf";
option java_outer_classname = "ProjectProtos";

message Project {
    string id = 1;
    string name = 2;
    ProjectType type = 3;
    repeated CodeRepository repositories = 4;
    string url = 5;
    google.protobuf.Timestamp created_date = 6;
    repeated string programming_languages = 7;
    int32 forks = 8;
    int32 watchers = 9;
    enum ProjectType {
        GITHUB = 0;
        SOURCEFORGE = 1;
        BITBUCKET = 2;
        OTHER = 3;
    }
}

message CodeRepository {
    string url = 1;
    RepositoryType type = 2;
    repeated Revision revisions = 3;
    enum RepositoryType {
        GIT = 0;
        SVN = 1;
        CVS = 2;
        OTHER = 3;
    }
}

message Revision {
    string id = 1;
    google.protobuf.Timestamp commit_date = 2;
    Person committer = 3;
    repeated ChangedFile files = 4;
    string log = 5;
}

message Person {
    string username = 1;
    string real_name = 2;
    string email = 3;
}

message ChangedFile {
    string name = 1;
    ChangeType change = 2;
    FileType type = 3;
    enum ChangeType {
        ADDED = 0;
        DELETED = 1;
        MODIFIED = 2;
    }
    enum FileType {
        BINARY = 0;
        JAVA = 1;
        GO = 2;
        TEXT = 3;
        XML = 4;
        JSON = 5;
        OTHER = 6;
    }
}